# canary-lib

./: README.md  add-version.sh  registry.json
cmake/: CanaryLib.cmake
libs/: README.md
libs/capuera/: CMakeLists.txt  capueraConfig.cmake.in
libs/capuera/include/: combat.hpp
libs/capuera/src/: combat.cpp
libs/kapuera/: CMakeLists.txt  Makefile  README.md  kapueraConfig.cmake.in
libs/kapuera/include/: kapuera.hpp
libs/kapuera/include/kapuera/: combat.hpp  tibia.hpp
libs/kapuera/include/kapuera/core/: combat.hpp
libs/kapuera/include/kapuera/interfaces/: ICombatEngine.hpp  ICombatEntity.hpp  IModule.hpp
libs/kapuera/include/kapuera/module/: InSequence.hpp
libs/kapuera/include/kapuera/modules/: Chained.hpp
libs/kapuera/include/kapuera/ports/tibia/: entities.hpp
libs/kapuera/src/: combat.cpp
libs/kapuera/src/module/: InSequence.cpp
libs/kapuera/src/modules/: Chained.cpp
libs/kapuera/tests/: CMakeLists.txt  basic_example.cpp  test_damage.cpp
libs/protocol/: CMakeLists.txt  protocolConfig.cmake.in
libs/protocol/include/: message.hpp
libs/resenha/: CMakeLists.txt  README.md  resenhaConfig.cmake.in
libs/resenha/include/: resenha.hpp
libs/resenha/include/resenha/: core.hpp
libs/resenha/include/resenha/codec/: ByTypeMap.hpp  WithTranslation.hpp
libs/resenha/include/resenha/interfaces/: ICodec.hpp  IEventTranslator.hpp
libs/resenha/src/: core.cpp
libs/resenha/src/codec/: ByTypeMap.cpp  WithTranslation.cpp
libs/resenha/tests/: CMakeLists.txt  basic_example.cpp
libs/retalho/: .gitignore  CMakeLists.txt  README.md  retalhoConfig.cmake.in
libs/retalho/include/: retalho.hpp
libs/retalho/include/retalho/: core.hpp
libs/retalho/src/: core.cpp
libs/retalho/tests/: CMakeLists.txt  basic_example.cpp
ports/capuera/: portfile.cmake  vcpkg.json
ports/kapuera/: portfile.cmake  vcpkg.json
ports/protocol/: portfile.cmake  vcpkg.json
ports/resenha/: portfile.cmake  vcpkg.json
ports/retalho/: copyright  portfile.cmake  vcpkg.json
protocol/: CMakeLists.txt
protocol/src/: message.cpp
test-project/: .gitignore  CMakeLists.txt  README.md  main.cpp  vcpkg-configuration.json  vcpkg.json
versions/: baseline.json
versions/c-/: capuera.json
versions/k-/: kapuera.json
versions/p-/: protocol.json
versions/r-/: resenha.json  retalho.json
